--- a/public/index.html
+++ b/public/index.html
@@ -19,31 +19,31 @@
             <div class="col-4 emotion-column">
                 <div class="d-flex flex-column">
                     <input type="checkbox" class="btn-check" id="joy" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion  btn-lg" for="joy">Joy 😊😄😁</label>
+                    <label class="btn btn-outline-primary btn-emotion  btn-lg" for="joy" data-emojis="😁">Joy 😊😄😁</label>
 
                     <input type="checkbox" class="btn-check" id="sadness" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion  btn-lg" for="sadness">Sadness 😢😞☹️</label>
+                    <label class="btn btn-outline-primary btn-emotion  btn-lg" for="sadness" data-emojis="☹️">Sadness 😢😞☹️</label>
 
                     <input type="checkbox" class="btn-check" id="fear" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="fear">Fear 😨😱😰</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="fear" data-emojis="😱">Fear 😨😱😰</label>
 
                     <input type="checkbox" class="btn-check" id="anger" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="anger">Anger 😡😠😤</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="anger" data-emojis="😡">Anger 😡😠😤</label>
 
                     <input type="checkbox" class="btn-check" id="surprise" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="surprise">Surprise 😮😲😯</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="surprise" data-emojis="😮">Surprise 😮😲😯</label>
 
                     <input type="checkbox" class="btn-check" id="disgust" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="disgust">Disgust 🤢🤮😒</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="disgust" data-emojis="🤢">Disgust 🤢🤮😒</label>
 
                     <input type="checkbox" class="btn-check" id="trust" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="trust">Trust 🤝🙏👨‍👩‍👧‍👦</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="trust" data-emojis="🤝">Trust 🤝🙏👨‍👩‍👧‍👦</label>
 
                     <input type="checkbox" class="btn-check" id="anticipation" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="anticipation">Anticipation 🤔🧐⏳</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="anticipation" data-emojis="🤔">Anticipation 🤔🧐⏳</label>
 
                     <input type="checkbox" class="btn-check" id="love" autocomplete="off">
-                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="love">Love ❤️💕😍</label>
+                    <label class="btn btn-outline-primary btn-emotion btn-lg" for="love" data-emojis="😍">Love ❤️💕😍</label>
                 </div>
             </div>
             <div class="col-8" id="emoji-container"></div>
